--- a/app/server/settings-local.json
+++ b/app/server/settings-local.json
@@ -1,5 +1,6 @@
 {
   "public": {
-    "houston_root_route": "/admin/collections"
+    "houston_root_route": "/admin/collections",
+    "video_chat_server": "//localhost:8080"
   }
 }
